[package]
name = "data-sync"
version = "0.1.0"
authors = ["Maros Korinek <maros.korinek@skyscanner.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.8.3"
reqwest = "0.11.3"
oauth2 = "4.0.0"
cookie = "0.15.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
actix-web = "3"
serde = "1.0.126"
serde_json = "1"
lazy_static = "1.4.0"

